--- a/TheCelebrity/app/src/main/res/layout/activity_main.xml
+++ b/TheCelebrity/app/src/main/res/layout/activity_main.xml
@@ -14,52 +14,66 @@
         android:layout_alignParentTop="true">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/celebImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            app:layout_row="0"
             app:layout_column="0"
-            app:layout_gravity="fill"/>
+            app:layout_gravity="fill"
+            app:layout_row="0" />
+
 
         <Button
             android:id="@+id/button0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@android:color/holo_green_dark"
             android:onClick="celebChosen"
             android:tag="0"
             android:text=""
             app:layout_column="0"
             app:layout_row="1" />
+
         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:background="@android:color/holo_green_dark"
             android:onClick="celebChosen"
             android:tag="1"
             android:text=""
             app:layout_column="0"
             app:layout_row="2" />
+
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:background="@android:color/holo_green_dark"
             android:onClick="celebChosen"
             android:tag="2"
             android:text=""
             app:layout_column="0"
             app:layout_row="3" />
+
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:background="@android:color/holo_green_dark"
             android:onClick="celebChosen"
-            android:tag="0"
+            android:tag="3"
             android:text=""
             app:layout_column="0"
             app:layout_row="4" />
+
 
     </android.support.v7.widget.GridLayout>
 
