Change some data

--- a/MapLocationDemo/app/src/debug/res/values/google_maps_api.xml
+++ b/MapLocationDemo/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAgZ2i61WBar9K_Pzvwa8MEwsjAp6b0iOI</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
 </resources>
